deploy.gowebapp-with-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gowebapp
  labels:
    app: gowebapp
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowebapp
      tier: frontend
  template:
    metadata:
      labels:
        app: gowebapp
        tier: frontend
    spec:
      containers:
      - name: gowebapp
        image: acr0505.azurecr.io/gowebapp:v1       
        ports:
        - containerPort: 80
