pod.busybox-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  restartPolicy: Always
  containers:
  - name: busybo
    image: busybox
    imagePullPolicy: IfNotPresent
    command:
      - sleep
      - "3600"
    volumeMounts:
      - mountPath: /var/lib/mysql
        name: mysql
  volumes:
  - name: mysql
    persistentVolumeClaim:
      claimName: azure-managed-disk
