pod.gowebapp-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gowebapp-mysql
  labels:
    app: gowebapp-mysql
    tier: backend
spec:
  containers:
  - name: gowebapp-mysql
    image: acr0505.azurecr.io/gowebapp-mysql:v1
    ports:
    - containerPort: 3306
