pod.gowebapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gowebapp
  labels:
    app: gowebapp
    tier: frontend
spec:
  containers:
  - name: gowebapp
    image: acr0505.azurecr.io/gowebapp:v1
    ports:
    - containerPort: 80
      protocol: TCP
